# collected_sources

./: .gitignore  1.txt  1a.txt  2.txt  2a.txt  FF.cpp  FF.h  Holder.h  Makefile  README  a.c  abort.c  access.c  af_unix.c  algif.c  align.c  append.c  arg.c  arg1.c  asm.c  b.c  c.c  check_mem.c  combine.c  cond_wait.c  dir.c  ecdt.c  elvis.c  ev.c  ev1.c  evtest.c  fadvise.c  fcntl.c  ff.ncb  for01.c  fork.c  fork_flush_tlb.c  fork_leak.c  fork_vfork.cpp  fp1.c  (+60 more)
LGAP/: .gitignore  Makefile  lgap.c
Stopky/: MANIFEST.MF  Stopky.java
acct/: Makefile  acct.c
acpi_tables/: Makefile
af9035/: .gitignore  CMakeLists.txt  append_list.sh  demux.c  driver  formats.txt  packet_headers.txt  pcm.c  pkt.c  xxx.c  xxx.h
antlr/: Makefile  T.g  TWalker.g  Test.java
antlr4-parser/: Makefile  main.cpp  par.g4
asm_filter/: Makefile  bug.c  lex.ll  main.c
atmel/: Makefile  a.c  ac.c  x.c
atmel/bubu/: my_idea.hex  my_idea.ly1  my_idea.prj
atmel/orig/: hfuse  lfuse
avr/: atmega16a.txt  attiny2313a.txt  avr.c  avr.txt  meson.build
avr/i2c/: i2c.c  meson.build
avr/leds/: leds.c  meson.build
avr/spi/: meson.build  spi.c
avr/temp/: meson.build  temp.c
avr/timer-leds/: meson.build  timer-leds.c
barvy/: colors.h  colorsmain.C  colorsmain.cpp  meson.build
bison/: Makefile  main.h  mp.y  mp.yy
bison/bison/: b.y  calc.y  rpcalc.y
bison/bison/mp/: Makefile  a.mp  main.cpp  main.h  mp.y  mp.yy
cfi/: .gitignore  Makefile  a.s  c.c
cr/: .gitignore  CMakeLists.txt  cr.c  cr.pl
cxxopts/: cxxopts.cpp  meson.build
diasel/: Makefile  Makefile.test  charset.h  diafile.txt  diafile_iso.txt  diasel.c  diasel.h  diatest.c  lcd.c  lcd.h  main.c  shift.h
diasel/ascii/: Makefile  ascii.c  ascii.h
dmx512/: .gitignore  Makefile  main.c
dtemp/: Makefile  dtemp.c
efi/: Makefile  README  acpi.c  common.h  main.c  meson.build  pic.c
efi-dump-memattr/: main.c  meson.build
ev/: ev.c  ev1.c  ev2.c  ev3.c
ev/ff-utils/: Makefile  evtest.c  ffcfstress.c  fftest.c  inputattach.c  myff.c
ev/ff-utils/linux/: input.h  serio.h
ff/: FF.h  main.cpp  windows.h
ff/ff/: linux.h
git_fnmatch/: gf.cpp  meson.build  run.sh
git_renames/: git_renames.cpp  log-raw.cpp  meson.build
glew/: .gitignore  Makefile  glew.c  meson.build
hack/: Makefile
handle_signals/: .gitignore  Makefile  main.c
inet-mini/: .gitignore  Makefile  inet-mini.c
init/: Makefile  init.c
init_asm/: .gitignore  Makefile  init_asm.S
ioctl_setflags/: meson.build  sf.cpp
ir/: Makefile  ir.c
jobclient/: .gitignore  Makefile  jobclient.c
json/: json.cpp  meson.build
kfifo-test/: .gitignore  CMakeLists.txt  kfifo-test.c  meson.build
ld/: Makefile  ld.c
lds/: Makefile  a.s  x.lds
lim/: Makefile  lim.c
llvm_walker/: Makefile  a.c  main.cpp
loader_boot/: Makefile  a.c  head.s  os.lds
lto_test/: .gitignore  Makefile  lib.c  lib.h  main.c
mktest/: Makefile.am  a.c  autogen.sh  config.h  config.h.in  configure.in
modules/: .gitignore
modules/aaa/: Makefile  aaa.c
modules/acpi_tables/: acpi_tables.c
modules/ftr_test/: Makefile  ftr_test.c
modules/hack/: hack.c
modules/irqsim/: Kbuild  irqsim.c  meson.build  writer.cpp
modules/kgr_tests/kgr-hello/: Makefile  kgr_hello.c
modules/kgr_tests/kgr-initial/: Makefile  kgraft_patcher.c
modules/kgr_tests/kgr-stack/: Makefile  kgraft_patcher1.c
modules/kgr_tests/kgr_3.13/: Makefile  kgr_patcher.c
modules/kgr_tests/klp/: Makefile  livepatch-sample.c
modules/mxser/: Makefile  mxser.c  serial_base.h  serial_core.c
move/: meson.build  move.cpp
mpd-dbus/: Makefile  main.c
mpi/: Makefile  mpi.c
mq/: Makefile  mq.c
mutex_pi/: meson.build  mutex_pi.c
netlink/: Makefile  meson.build  netlink.c  nl.cpp
pcm_anal/: .gitignore  CMakeLists.txt  pcm_anal.c
platform/: linux.cpp  linux.h  windows.cpp
prctl/: Makefile  prctl.c
prof/: .gitignore  Makefile  kiss.c  src.c
pthread/: meson.build  pthread.cpp
pv112/1/: Makefile  karel.c
pv112/2/: Makefile  PV112_2.c  karel.h
pv112/2/karel/: karel.3dm  karel.mtl  karel.raw
pv112/3/: Karel3D.cpp  Karel3D.raw  Makefile
pv112/4/: Karel3D.3dm  Makefile  PV112_4.cpp
pv112/proj/: Makefile  data.h  projekt.c  text.h
pv112/proj/objs/: w2o.pl
pv112/proj/objs/wrls/: A.wrl  B.wrl  I.wrl  J.wrl  L.wrl  R.wrl  S.wrl  Y.wrl
qt5-icon/: Makefile  main.cpp  main.h  tray.pro
qt5-scrollbar/: main.cpp  main.h  qt5-scrollbar.pro
raii/: meson.build  raii.cpp
read-x-bins/: Makefile  read.c
revoke/: Makefile  revoke.c  revoke1.c
root_soutez/: r4.txt  reve1.c
rpc/: .gitignore  Makefile  rpc.c  rpc_c.c
sched/: .gitignore  Makefile  cap.c  sched.c
segv/: meson.build  segv.cpp
ser/: cl.c
server/: Makefile  a.sh  cl.c  kl.c  meson.build  ser.c
setinmap/: Makefile  setinmap.cpp
shm/: shm.c  shm1.c
slirp/: .gitignore  CMakeLists.txt  slirp_test.c
snd_fft/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  autogen.sh  configure.in  snd_fft.c
sqlite/: .gitignore  CMakeLists.txt  db.db  sqlite.cpp
tty/: .gitignore  Makefile  csi_P.c  hdlc.c  kdgkb.c  ld.c  ld1.c  ld2.c  meson.build  n_gsm.c  process.h  pty.c  pty_multiwrite.c  serial.c  tcset2.c  tiocm.c  tiocsetd.c  tty-loop-hangup.c  tty-loop-open.c  tty-loop-read.c  tty-loop-rw.c  tty-loop-tiocsctty.c  tty-loop-tiocsetd.c  tty.h  tty1.c  tty2.c  tty3.c  tty_double.c  tty_double_r.c  tty_name.c  tty_printk.c  tty_unimap.c  vcs_test.c
v/: vect3t.h
vect/: vect3tmain.C
vrecko_ff/: FF.cpp  FF.h  Infinite.ffe  ff.sln  ff.vcproj  platform.h  viewpoin_scr.ffe
vrecko_ff/platform/: linux.cpp  linux.h  windows.cpp  windows.h
vrecko_ff/test/: lmain.cpp
x11/: .gitignore  Makefile  x11.c
